# web-scraping

./: pyproject.toml
scraper/: scraper.py
